--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:watch": "nwb test-react --server"
   },
   "dependencies": {
+    "@pondorasti/remark-img-links": "^1.0.5",
     "bootstrap": "^4.6.0",
     "react-bootstrap": "^1.5.2",
     "react-markdown": "^5.0.3",
