--- a/package.json
+++ b/package.json
@@ -33,11 +33,9 @@
     "react": "16.x"
   },
   "devDependencies": {
-    "css-loader": "^5.2.6",
     "nwb": "0.23.x",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "style-loader": "^2.0.0"
+    "react-dom": "^17.0.2"
   },
   "author": "",
   "homepage": "",
