--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   },
   "dependencies": {
     "@pondorasti/remark-img-links": "^1.0.5",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.1.3",
     "react-bootstrap": "^1.5.2",
+    "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-markdown": "^5.0.3",
     "react-remark": "^2.0.3",
     "rehype-katex": "^4.0.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "nwb": "0.23.x",
+    "nwb-sass-2": "^0.11.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
